--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^4.2.5"
 psycopg2 = "^2.9.7"
 pillow = "^10.0.0"
 djangorestframework = "^3.14.0"
+django-filter = "^23.2"
 
 
 [build-system]
