--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pillow = "^10.0.0"
 djangorestframework = "^3.14.0"
 django-filter = "^23.2"
 djangorestframework-simplejwt = "^5.3.0"
+coverage = "^7.3.1"
 
 
 [build-system]
