--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ djangorestframework = "^3.14.0"
 django-filter = "^23.2"
 djangorestframework-simplejwt = "^5.3.0"
 coverage = "^7.3.1"
+drf-yasg = "^1.21.7"
 
 
 [build-system]
