--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ django-filter = "^23.2"
 djangorestframework-simplejwt = "^5.3.0"
 coverage = "^7.3.1"
 drf-yasg = "^1.21.7"
+celery = "^5.3.4"
+redis = "^5.0.1"
+django-celery-beat = "^2.5.0"
 
 
 [build-system]
